fix: update placeholder color for better visibility

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
   --color-ftomain: #F86C65;
   --color-textmain: #1A1918;
   --color-textdesc: #595856;
-  --color-textplaceholder: #C9C7C2;
+  --color-textplaceholder: #383735;
   --color-ftowhite: #F4F0EF;
 }
 
